Add in buttons to make app proof process easier for people without main app.

--- a/color_sort/src/index.css
+++ b/color_sort/src/index.css
@@ -47,3 +47,11 @@ code {
   transform: translate(-50%, 0);
   z-index: 1000;
 }
+
+.hidden {
+  display: none;
+}
+
+.secondaryButtons {
+  margin: 10px;
+}
